2021-07-23  Andres Gonzalez  <andresg_22@apple.com>

        Add a method to WebAccessibilityObjectWrapper so that clients can retrieve the text of each line and their corresponding bounding rectangles.
        https://bugs.webkit.org/show_bug.cgi?id=228251

        Reviewed by Chris Fleizach.

        * accessibility/ios-simulator/element-line-rects-and-text-expected.txt: Added.
        * accessibility/ios-simulator/element-line-rects-and-text.html: Added.

2021-07-23  Alexey Shvayka  <shvaikalesh@gmail.com>

        [WebIDL] Properly validate and merge descriptors in [Replaceable] setter
        https://bugs.webkit.org/show_bug.cgi?id=227662

        Reviewed by Sam Weinig.

        * fast/dom/replaceable-setter-throws-if-defineownproperty-fails-expected.txt: Added.
        * fast/dom/replaceable-setter-throws-if-defineownproperty-fails.html: Added.
        * fast/dom/window-opener-setter-throws-if-defineownproperty-fails-1-expected.txt: Added.
        * fast/dom/window-opener-setter-throws-if-defineownproperty-fails-1.html: Added.
        * fast/dom/window-opener-setter-throws-if-defineownproperty-fails-2-expected.txt: Added.
        * fast/dom/window-opener-setter-throws-if-defineownproperty-fails-2.html: Added.

2021-07-23  Eric Hutchison  <ehutchison@apple.com>

        [BigSur wk1 Debug ] imported/w3c/web-platform-tests/IndexedDB/idb_binary_key_conversion.htm is a flaky timeout .
        https://bugs.webkit.org/show_bug.cgi?id=228260.

        Unreviewed test gardening.

        * platform/mac-wk1/TestExpectations:

2021-07-23  Eric Hutchison  <ehutchison@apple.com>

        [ Mac wk2 Debug ] inspector/canvas/create-context-webgl.html is a flaky failure.
        https://bugs.webkit.org/show_bug.cgi?id=228256.

        Unreviewed test gardening.

        * platform/mac-wk2/TestExpectations:

2021-07-23  Ayumi Kojima  <ayumi_kojima@apple.com>

        [ iOS ] fast/mediastream/mediastreamtrack-audio-clone.html is a flaky failure.