@@ -9,10 +9,10 @@ SETUP:
 PASS new ApplePayError() threw exception TypeError: Not enough arguments.
 
 SETUP:
-PASS new ApplePayError([]) threw exception TypeError: Argument 1 ('errorCode') to the ApplePayError constructor must be one of: "unknown", "shippingContactInvalid", "billingContactInvalid", "addressUnserviceable", "couponCodeInvalid", "couponCodeExpired".
+PASS new ApplePayError([]) threw exception TypeError: Argument 1 ('errorCode') to the ApplePayError constructor must be one of: "unknown", "shippingContactInvalid", "billingContactInvalid", "addressUnserviceable".
 
 SETUP:
-PASS new ApplePayError('') threw exception TypeError: Argument 1 ('errorCode') to the ApplePayError constructor must be one of: "unknown", "shippingContactInvalid", "billingContactInvalid", "addressUnserviceable", "couponCodeInvalid", "couponCodeExpired".
+PASS new ApplePayError('') threw exception TypeError: Argument 1 ('errorCode') to the ApplePayError constructor must be one of: "unknown", "shippingContactInvalid", "billingContactInvalid", "addressUnserviceable".
 
 SETUP:
 PASS new ApplePayError('unknown') did not throw exception.
@@ -27,10 +27,10 @@ SETUP:
 PASS new ApplePayError('addressUnserviceable') did not throw exception.
 
 SETUP:
-PASS new ApplePayError('couponCodeInvalid') did not throw exception.
+FAIL new ApplePayError('couponCodeInvalid') should not throw exception. Threw exception TypeError: Argument 1 ('errorCode') to the ApplePayError constructor must be one of: "unknown", "shippingContactInvalid", "billingContactInvalid", "addressUnserviceable".
 
 SETUP:
-PASS new ApplePayError('couponCodeExpired') did not throw exception.
+FAIL new ApplePayError('couponCodeExpired') should not throw exception. Threw exception TypeError: Argument 1 ('errorCode') to the ApplePayError constructor must be one of: "unknown", "shippingContactInvalid", "billingContactInvalid", "addressUnserviceable".
 
 SETUP:
 PASS new ApplePayError('unknown', []) threw exception TypeError: Argument 2 ('contactField') to the ApplePayError constructor must be one of: "phoneNumber", "emailAddress", "name", "phoneticName", "postalAddress", "addressLines", "subLocality", "locality", "postalCode", "subAdministrativeArea", "administrativeArea", "country", "countryCode".
