@@ -1,3 +1,15 @@
+2021-07-24  Devin Rousso  <drousso@apple.com>
+
+        [Apple Pay] Do not add coupon code `ApplePayErrorCode` values for systems that do not support it
+        https://bugs.webkit.org/show_bug.cgi?id=228243
+
+        Reviewed by Wenson Hsieh.
+
+        Test: http/tests/ssl/applepay/ApplePayError.html
+
+        * Modules/applepay/ApplePayErrorCode.idl:
+        * Modules/applepay/ApplePayErrorCode.h:
+
 2021-07-23  Andres Gonzalez  <andresg_22@apple.com>
 
         Add a method to WebAccessibilityObjectWrapper so that clients can retrieve the text of each line and their corresponding bounding rectangles.
