@@ -1,5 +1,15 @@
 2021-07-24  Devin Rousso  <drousso@apple.com>
 
+        [Apple Pay] Do not add coupon code `ApplePayErrorCode` values for systems that do not support it
+        https://bugs.webkit.org/show_bug.cgi?id=228243
+
+        Reviewed by Wenson Hsieh.
+
+        * Platform/cocoa/PaymentAuthorizationPresenter.mm:
+        (WebKit::toPKPaymentErrorCode):
+
+2021-07-24  Devin Rousso  <drousso@apple.com>
+
         [iOS] REGRESSION(r277505): `-[WKWebView underPageBackgroundColor]` also changes the scroll bar color
         https://bugs.webkit.org/show_bug.cgi?id=228259
         <rdar://problem/80116822>
